--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -312,7 +312,7 @@ img#backgroundImage{
 	visibility: hidden;
 }
 /*Fixes*/
-.privacy-public .ui-checkbox .ui-btn-icon-left .ui-btn-inner,.privacy-private .ui-radio .ui-btn-icon-left .ui-btn-inner{
+.privacy-public .ui-radio .ui-btn-icon-left .ui-btn-inner,.privacy-private .ui-radio .ui-btn-icon-left .ui-btn-inner{
 	padding-left: 0;
 	position: relative;
 	top: 2.8em;
