--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -559,6 +559,7 @@ img#backgroundImage{
 	margin: 0;
 	bottom: 0;
 	border: none;
+	cursor: pointer;
 }
 #rowTitleMove ul li.ui-btn-active{ background: #009999; }
 #rowTitleMove ul li[opc]{ display: none; }
