--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -801,16 +801,33 @@ li.userInList h3{
 	color: #2ECC71;
 	text-decoration: none;
 }
+#prevNewsAndHot-dialogs h4{
+	display: block;
+	-webkit-margin-before: 0;
+	-webkit-margin-after: 0;
+	-webkit-margin-start: 0;
+	-webkit-margin-end: 0x;
+	font-weight: bold;
+	margin: 3px 0;
+}
 #prevNewsAndHot-dialogs ul{
 	list-style: none;
 	-webkit-padding-start: 0;
 	-webkit-margin-before: 0;
 	-webkit-margin-after: 10px;
 }
+#prevNewsAndHot-dialogs a.more{
+	color: #FF6633;
+	text-decoration: none;
+}
 #prevNewsAndHot-dialogs ul li{ 
 	padding: 3px 0;
 	text-align: left;
+	display: none;
 }
+#prevNewsAndHot-dialogs ul li:nth-child(1), 
+#prevNewsAndHot-dialogs ul li:nth-child(2), 
+#prevNewsAndHot-dialogs ul li:nth-child(3){ display: list-item; }
 #prevNewsAndHot-dialogs ul#newsInfo li p.title{
 	text-align: left;
 	font-size: 13px;
