Boton de back en el menu inferior
Boton para hacer back

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -964,6 +964,18 @@ li.userInList h3{
 	transform: rotate(180deg);
 }
 
+#bottom-menu #backbtn {
+	position: fixed; 
+	left: 0;
+	background: transparent url('newdesign/menu/previous.png') no-repeat center 2px;
+	-webkit-background-size: 22px 25px;
+	background-size: 22px 25px;	
+	width: 40px;
+	height: 36px;
+	z-index: 1000;
+	margin-top: 6px;
+}
+
 #bottom-menu ul{
 	list-style: none;
 	width: 90%;
