Fix del backbutton
backbuton mejorado para movil, tambien boton de search en notificaciones

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -702,6 +702,7 @@ img#backgroundImage{
 	width: 40%;
 }
 #page-news #sub-menu .ui-block-c,
+#page-notif #sub-menu .ui-block-c,
 #page-preferences #sub-menu .ui-block-c,
 #page-profile #sub-menu .ui-block-c,
 #page-search #sub-menu .ui-block-c,
