--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -562,7 +562,7 @@ img#backgroundImage{
 	cursor: pointer;
 }
 #rowTitleMove ul li a{ 
-	color: white;
+	color: white !important;
 	text-decoration: none;
 }
 #rowTitleMove ul li.ui-btn-active{ background: #009999; }
@@ -1449,6 +1449,7 @@ li.userInList h3{
 	margin-top: 113px;
 	background-color: #e2e6e7 !important;
 }
+#page-tagsList .no-join #panel{ display: none; }
 /*TagList Ends*/
 
 /*New Tag*/
@@ -1857,35 +1858,22 @@ li.userInList h3{
 #page-preferences .ui-content{
 	margin-top: 113px;
 }
-
 #page-preferences .notification-num,
-#page-preferences .notification-num .ui-link{
-	color: #FFF !important;
-}
-
-#page-preferences .ui-link, #page-preferences .ui-link:visited{
-	color: #FFF;
-}
-
-#page-preferences .ui-icon {
-	background-color: #BBB !important;
-}
-
+#page-preferences .notification-num .ui-link{ color: #FFF !important; }
+#page-preferences .ui-link, #page-preferences .ui-link:visited{ color: #FFF; }
+#page-preferences .ui-icon { background-color: #BBB !important; }
 #page-preferences .ui-corner-all {
 	border-radius: 4px /*{global-radii-blocks}*/;
 	-webkit-border-radius: 4px /*{global-radii-blocks}*/;
 }
-
 #page-preferences .ui-selectmenu-list .ui-icon {
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
 }
-
 #page-preferences .ui-btn-corner-all {
 	-webkit-border-radius: 4px /*{global-radii-buttons}*/;
 	border-radius: 4px /*{global-radii-buttons}*/;
 }
-
 #page-preferences .ui-btn {
 	text-align: left;
 	width: 100%;
@@ -1894,21 +1882,18 @@ li.userInList h3{
 	border-radius: 4px /*{global-radii-blocks}*/ !important;
 	-webkit-border-radius: 4px /*{global-radii-blocks}*/ !important;
 }
-
 #page-preferences .ui-btn-up-m {
 	border: 1px solid #FFF;
 	background: #FFF;
 	font-weight: bold;
 	color: #EB5A28;
 }
-
 #page-preferences .ui-btn-hover-m {
 	border: 1px solid #bbbbbb ;
 	background: #FFF;
 	font-weight: bold;
 	color: #EB5A28 ;
 }
-
 #page-preferences .ui-btn-up-n {
 	border: 1px solid #EB5A28 ;
 	background: #EB5A28 ;
@@ -1919,7 +1904,6 @@ li.userInList h3{
 	width: 99%;
 	text-shadow: 0 0px 0 #FFF;	
 }
-
 #page-preferences .ui-btn-hover-n {
 	border: 1px solid #bbbbbb ;
 	background: #EB5A28 ;
@@ -1930,7 +1914,6 @@ li.userInList h3{
 	width: 99%;
 	text-shadow: 0 0px 0 #FFF;	
 }
-
 #page-preferences {
 	background-color: #E1E6E7;
 	border: none;
@@ -1938,7 +1921,6 @@ li.userInList h3{
 	border:1px solid #E1E6E7;
 	box-shadow: none;
 }
-
 #page-preferences #content, #page-preferences #scroller, 
 #page-preferences #fs-wrapper, #page-preferences .smt-tag-content{
 	background-color: #E1E6E7;
@@ -1947,22 +1929,29 @@ li.userInList h3{
 	border:1px solid #E1E6E7;
 	box-shadow: none;
 }
-
-#page-preferences #fs-wrapper{
-	margin: 0 !important;
+#page-preferences #fs-wrapper{ 
+	margin: 0 !important; 
+	top: 20px;
 }
-
 #page-preferences .ui-radio-on{
 	background-color: #EB5A28;
 	border-color: #EB5A28;
 	color: #FFF;
 	text-decoration: none;
 }
-
-#page-preferences .ui-link, #page-preferences .ui-link:visited{
-	color: #505F60;
+#page-preferences .ui-link, #page-preferences .ui-link:visited{ color: #505F60; }
+#page-preferences .save{
+	margin: 20px 0 40px;
+	height: 65px;
+	text-align:center;
 }
-
+#page-preferences .save img{
+	height: 30px;
+	width: 30px;
+}
+#preferencesDialog ul#ulMyPrefe li{ text-align: left;}
+#preferencesDialog #ulMyPrefe li img{ margin-right: 20px; }
+/*End Preferences*/
 /*SeekPreferences Start*/
 #page-seekPreferences #sub-menu{
 	text-shadow: none;
