--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -125,6 +125,9 @@
 	z-index: 2000;
 	position: absolute;
 }
+.tag-container [tag] menu ul{
+	padding: 4px 0;
+}
 .sub-menu-tag ul{
 	width: 100%;
 	list-style-type: none;
@@ -134,7 +137,7 @@
 	border: 1px solid #CCC;
 	position: relative;
 	display: list-item;
-	bottom: 2.8em;
+	bottom: 3.2em;
 	right: 3.8em;
 }
 /* Flecha sub-menu */
@@ -394,6 +397,44 @@ img#backgroundImage{
 	background: transparent;
 }
 /*tag*/
+.tag-container [tag] .tag-counts{
+	position:absolute;
+	top:0.563em;
+	right:0.781em; /*25px;*/
+	background-color: rgba(255, 255, 255, 0.4);
+	padding: .2em;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-o-border-radius: 10px;
+	border-radius: 10px;
+}
+.tag-container [tag] .tag-counts div{
+	background-size:60% auto;
+	background-repeat:no-repeat;
+	background-position:top center;
+	width:100%;
+	height:100%;;
+}
+.tag-container [tag] .tag-counts div>div{
+	color: white;
+	font-size: 0.4em;
+	font-weight: normal;
+	position: relative;
+	top: 6px;
+}
+.tag-container [tag] .tag-counts div#trash{
+	background-image:url('newdesign/tag/remove.png');
+}
+.tag-container [tag] .tag-counts div#trash:hover{
+	background-image:url('newdesign/tag/remove.png');
+}
+.tag-container [tag] .tag-counts div#report{
+	background-image:url('newdesign/tag/hide.png?1');
+}
+.tag-container [tag] .tag-counts div#report:hover{
+	background-image:url('newdesign/tag/hide.png?1');
+}
 [tag] menu li{
 	border: none !important;
 	/*font-size: 2em;*/
@@ -401,6 +442,11 @@ img#backgroundImage{
 	color: white;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
 	background-size: 1.433em !important;
+	margin: 0 3px;
+}
+.tag-container [tag] menu li#like, .tag-container [tag] menu li#dislike{
+	padding: 0;
+	margin: 2px;
 }
 .tag-container [tag] menu li#like div{
 	background-image:url('newdesign/tag/like.png?1');
@@ -422,12 +468,6 @@ img#backgroundImage{
 .tag-container [tag] menu li#share:hover{
 	background-image:url('menu/redist_over.png?1');
 	
-}
-.tag-container [tag] menu li#report{
-	background-image:url('newdesign/tag/hide.png?1');
-}
-.tag-container [tag] menu li#report:hover{
-	background-image:url('newdesign/tag/hide.png?1');
 }
 .tag-container [tag] menu li#redistr{
 	background-image:url('newdesign/tag/share.png?1');
@@ -456,10 +496,6 @@ img#backgroundImage{
 .tag-container [tag] menu li#edit:hover,
 .mobile .tag-container [tag] menu li.expand#edit{
 	background-image:url('menu/edit_over.png?1');
-}
-[tag] menu li#like, [tag] menu li#dislike,[tag] menu li#other-options{
-	padding: 0;
-	background-image: none;
 }
 [tag] menu li#like div, [tag] menu li#dislike div{
 	top: -6px;
