--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -397,24 +397,25 @@ img#backgroundImage{
 	background: transparent;
 }
 /*tag*/
-.tag-container [tag] .tag-counts{
-	position:absolute;
-	top:0.563em;
-	right:0.781em; /*25px;*/
+.tag-container [tag] .tag-counts{ /*25px;*/
 	background-color: rgba(255, 255, 255, 0.4);
-	padding: .2em;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	-ms-border-radius: 10px;
 	-o-border-radius: 10px;
 	border-radius: 10px;
+	right: 0.781em;
+	top: 0.563em;
+	position: absolute;
+	padding: 5px;
 }
 .tag-container [tag] .tag-counts div{
-	background-size:60% auto;
+	background-size:75% auto;
 	background-repeat:no-repeat;
 	background-position:top center;
 	width:100%;
-	height:100%;;
+	height:100%;
+	margin:0;;
 }
 .tag-container [tag] .tag-counts div>div{
 	color: white;
@@ -422,6 +423,7 @@ img#backgroundImage{
 	font-weight: normal;
 	position: relative;
 	top: 6px;
+	text-shadow: none;
 }
 .tag-container [tag] .tag-counts div#trash{
 	background-image:url('newdesign/tag/remove.png');
@@ -447,6 +449,13 @@ img#backgroundImage{
 .tag-container [tag] menu li#like, .tag-container [tag] menu li#dislike{
 	padding: 0;
 	margin: 2px;
+}
+.tag-container [tag] menu li#users{
+	background-image:url('newdesign/tag/profile.png');
+}
+.tag-container [tag] menu li#users:hover,
+.mobile .tag-container [tag] menu li.expand#users{
+	background-image:url('newdesign/tag/profile.png');
 }
 .tag-container [tag] menu li#like div{
 	background-image:url('newdesign/tag/like.png?1');
